fix title focus

--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -75,16 +75,16 @@
 	}
 }
 
-.editorWrapper.withIconAndCover.align0 {
-	.block.blockCover {
+.editorWrapper.withIconAndCover {
+	.block.blockCover.align0 {
 		.elements {
 			.buttons { left: 80px; }
 		}
 	}
 }
 
-.editorWrapper.isProfile.withIconAndCover.align0 {
-	.block.blockCover {
+.editorWrapper.isProfile.withIconAndCover {
+	.block.blockCover.align0 {
 		.elements {
 			.buttons { left: 112px; }
 		}
