--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -48,7 +48,7 @@
 			td.cell.isName {
 				.icon.expand { 
 					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
-					background-size: 20px 20px; background-position: 9px center; background-color: #fff;
+					background-size: 20px 20px; background-position: 9px 14px; background-color: #fff;
 				}
 				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
 			}
