--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -87,7 +87,7 @@
 				.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
 				.filter {
 					#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
-					#placeHolder { color: $colorDarkGrey; }
+					#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
 				}
 			}
 
