--- a/src/scss/menu/thread.scss
+++ b/src/scss/menu/thread.scss
@@ -7,6 +7,7 @@
 	.menu.menuThreadList,
 	.menu.menuThreadStatus {
 		.description { color: $colorDarkGrey; display: flex; }
+		.item { line-height: 22px; }
 		.side { width: 50%; }
 		.side.right { text-align: right; white-space: nowrap; }
 
@@ -29,8 +30,8 @@
 		.item:last-child { border: 0px; }
 
 		.item {
-			.icon { position: absolute; left: 16px; top: 11px; }
-			.icon.user { top: 12px; }
+			.icon { position: absolute; left: 16px; top: 12px; }
+			.icon.user { top: 13px; }
 			.icon.cafe { left: 15px; width: 20px; height: 20px; background-size: 18px 16px; background-image: url('~img/icon/cafe.svg'); }
 			.info { padding-left: 28px; }
 		}
