--- a/electron/about.css
+++ b/electron/about.css
@@ -1,4 +1,4 @@
-body { color: #2c2b27; background-color: #fff; }
+body { color: #2c2b27; background-color: #fff; font-family: Helvetica, Arial, sans-serif; }
 
 :focus { outline: 0px; }
 
