--- a/src/scss/component/inputWithFile.scss
+++ b/src/scss/component/inputWithFile.scss
@@ -2,7 +2,7 @@
 
 .inputWithFile {
 	padding: 11px 13px; border-radius: 6px; border: solid 1px $colorLightGrey; color: $colorDarkGrey; @include text-common; 
-	transition: background 0.05s ease-in-out; white-space: nowrap; overflow: hidden; line-height: 20px;
+	transition: background 0.05s ease-in-out; white-space: nowrap; overflow: hidden; line-height: 20px; text-align: left;
 }
 .inputWithFile {
 	.txt { line-height: 20px; height: 20px; overflow: hidden; width: calc(100% - 26px); vertical-align: top; }
