--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -21,16 +21,7 @@
 		}
 		.download:hover { color: #1092d9; }
 
-		.icon.type { width: 24px; height: 24px; margin-right: 4px; transition: none; vertical-align: top; }
-		.icon.other { background-image: url('~img/icon/file/other.svg'); }
-		.icon.image { background-image: url('~img/icon/file/image.svg'); }
-		.icon.video { background-image: url('~img/icon/file/video.svg'); }
-		.icon.text { background-image: url('~img/icon/file/text.svg'); }
-		.icon.archive { background-image: url('~img/icon/file/archive.svg'); }
-		.icon.audio { background-image: url('~img/icon/file/audio.svg'); }
-		.icon.pdf { background-image: url('~img/icon/file/pdf.svg'); }
-		.icon.presentation { background-image: url('~img/icon/file/presentation.svg'); }
-		.icon.table { background-image: url('~img/icon/file/table.svg'); }
+		.icon.file-type { width: 24px; height: 24px; margin-right: 4px; transition: none; vertical-align: top; }
 	}
 	.block.blockFile:hover {
 		.download { opacity: 1; }
