--- a/src/scss/popup/preview.scss
+++ b/src/scss/popup/preview.scss
@@ -5,5 +5,6 @@
 		.innerWrap { padding: 10px; min-width: 50px; min-height: 50px; margin: -25px 0px 0px -25px; }
 		.wrap { width: 100%; height: 100%; overflow-x: hidden; overflow-y: auto; }
 		.content { border-radius: 4px; display: block; }
+		#content { border-radius: 6px; }
 	}
 }
