--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -90,6 +90,7 @@
 
 			.cell.c-file {
 				.inputWithFile { border: 0px; padding: 0px; }
+				.item { display: inline-block; vertical-align: top; }
 			}
 
 			.cell.c-link {
