--- a/src/scss/menu/dataview/media.scss
+++ b/src/scss/menu/dataview/media.scss
@@ -1,12 +1,12 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewMedia {}
+	.menu.menuDataviewMedia { border-radius: 2px; box-shadow: 0px 0px 0px 2px $colorOrange;  }
 	.menu.menuDataviewMedia {
 		.content { padding-bottom: 0px; }
 
 		.item {
-			img { display: block; }
+			img { display: block; width: 100%; height: 208px; object-fit: cover; }
 			.name { line-height: 20px; }
 			.element { width: calc(100% - 20px); display: inline-block; vertical-align: top; }
 		}
