--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -36,15 +36,15 @@
 .icon.relation.c-email { background-image: url('~img/icon/dataview/relation/email.svg'); }
 .icon.relation.c-phone { background-image: url('~img/icon/dataview/relation/phone.svg'); }
 
-.icon.file-type.other { background-image: url('~img/icon/file/other.svg'); }
-.icon.file-type.image { background-image: url('~img/icon/file/image.svg'); }
-.icon.file-type.video { background-image: url('~img/icon/file/video.svg'); }
-.icon.file-type.text { background-image: url('~img/icon/file/text.svg'); }
-.icon.file-type.archive { background-image: url('~img/icon/file/archive.svg'); }
-.icon.file-type.audio { background-image: url('~img/icon/file/audio.svg'); }
-.icon.file-type.pdf { background-image: url('~img/icon/file/pdf.svg'); }
-.icon.file-type.presentation { background-image: url('~img/icon/file/presentation.svg'); }
-.icon.file-type.table { background-image: url('~img/icon/file/table.svg'); }
+.icon.file-type.other { background-image: url('~img/icon/file/other.svg') !important; }
+.icon.file-type.image { background-image: url('~img/icon/file/image.svg') !important; }
+.icon.file-type.video { background-image: url('~img/icon/file/video.svg') !important; }
+.icon.file-type.text { background-image: url('~img/icon/file/text.svg') !important; }
+.icon.file-type.archive { background-image: url('~img/icon/file/archive.svg') !important; }
+.icon.file-type.audio { background-image: url('~img/icon/file/audio.svg') !important; }
+.icon.file-type.pdf { background-image: url('~img/icon/file/pdf.svg') !important; }
+.icon.file-type.presentation { background-image: url('~img/icon/file/presentation.svg') !important; }
+.icon.file-type.table { background-image: url('~img/icon/file/table.svg') !important; }
 
 .icon.view.c0 { background-image: url('~img/icon/dataview/view/grid0.svg'); }
 .icon.view.c1 { background-image: url('~img/icon/dataview/view/list0.svg'); }
