--- a/src/scss/menu/dataview/media.scss
+++ b/src/scss/menu/dataview/media.scss
@@ -6,8 +6,8 @@
 		.content { padding-bottom: 0px; }
 
 		.item {
-			img { display: block; width: 100%; height: 208px; object-fit: cover; }
-			.name { line-height: 20px; }
+			img { display: block; max-width: 100%; max-height: 208px; object-fit: cover; }
+			.name { line-height: 20px; width: calc(100% - 26px); @include text-overflow-nw; }
 			.element { width: calc(100% - 20px); display: inline-block; vertical-align: top; }
 		}
 		.item:hover::before { opacity: 0.15; }
