--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -27,12 +27,10 @@
 			}
 			.head.isDragging { border: 0px; background: rgba(255,255,255,0.5); }
 
-			.cellContent { @include text-overflow-nw; width: 100%; }
+			.cellContent { width: 100%; }
 			.cellContent.c-select { white-space: normal; width: auto; overflow: visible; }
 				
-			td.cell { 
-				padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; overflow: hidden;
-			}
+			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			td.cell:last-child { border-right: 0px; }
 			td.cell {
 				.name { @include text-overflow-nw; width: 100%; }
