--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -48,7 +48,7 @@
 			td.cell.isName {
 				.icon.expand { 
 					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
-					background-size: 20px 20px; background-position: 9px 14px; background-color: #fff;
+					background-size: 20px 20px; background-position: 9px 14px; background-color: rgba(255,255,255,0.75);
 				}
 				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
 			}
@@ -58,7 +58,7 @@
                 .input-text { padding: 0px; height: 20px; }
 				.textarea { 
 					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
-					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1;
+					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1; white-space: normal;
 				}
 				.cellContent { height: auto; }
 				.cellContent {
