block relation fixes

--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -55,6 +55,8 @@
 		.smile { margin-right: 4px; }
 	}
 
+	.cell.c-date { cursor: text; }
+
 	.cell.c-select { cursor: text; }
 	.cell.c-select {
 		.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
