--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -59,7 +59,7 @@
 					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
 					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1; white-space: normal;
 				}
-				.cellContent { height: auto; }
+				.cellContent { height: auto; overflow: visible; white-space: normal; }
 				.cellContent {
 					.name { display: inline-block; }
 				}
