#909: grid components are now separate

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -88,6 +88,7 @@
 				.name:empty { display: none; }
 				span:empty { display: none; }
 			}
+
 			.cellContent.c-file {
 				.inputWithFile { border: 0px; padding: 0px; }
 				.item { display: inline-block; vertical-align: top; white-space: nowrap; max-width: 150px; margin-right: 8px; }
@@ -95,6 +96,10 @@
 					.name { line-height: 20px; width: calc(100% - 24px); @include text-overflow-nw; }
 				}
 				.cellContent { white-space: normal; }
+			}
+
+			.cellContent.c-title {
+				.name { width: calc(100% - 24px) !important; }
 			}
 
 			.cellContent.c-link {
