--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -91,11 +91,32 @@
 
 			.cellContent.c-file {
 				.inputWithFile { border: 0px; padding: 0px; }
-				.item { display: inline-block; vertical-align: top; white-space: nowrap; max-width: 150px; margin-right: 8px; }
+				.item { display: inline-block; vertical-align: top; white-space: nowrap; max-width: 100%; margin-right: 8px; }
 				.item {
 					.name { line-height: 20px; width: calc(100% - 24px); @include text-overflow-nw; }
 				}
 				.cellContent { white-space: normal; }
+			}
+
+			.cellContent.c-select { line-height: 0px; }
+			.cellContent.c-select {
+				.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
+				.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
+				.DraggableTags::after { display: none; }
+				.DraggableTags-tag { max-width: 100%; }
+
+				.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
+				.filter {
+					#filter { 
+						-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
+						word-wrap: break-word; white-space: normal;
+					}
+					#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
+				}
+				.noPlaceholder {
+					.filter #filter { position: relative; }
+					#placeHolder { display: none; }
+				}
 			}
 
 			.cellContent.c-title {
