--- a/src/scss/block/dataview/view/gallery.scss
+++ b/src/scss/block/dataview/view/gallery.scss
@@ -4,17 +4,22 @@
 	.block.blockDataview {
 		.viewItem.viewGallery { padding: 16px 0px; display: flex; flex-wrap: wrap; column-count: 4; }
 		.viewItem.viewGallery {
+			.cellContent {
+				.name { max-width: 100%; @include text-overflow-nw; }
+			}
+
 			.cellContent:last-child { margin: 0px; }
+
 			.cellContent.c-date { color: #6c6a5f; }
 
 			.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
 			.cellContent.c-title {
 				.smile { margin-bottom: 10px; }
-				.name { height: 24px; }
+				.name { height: 24px; width: calc(100% - 28px) !important; }
 			}
 
-			.cellContent {
-				.name { max-width: 100%; @include text-overflow-nw; }
+			.cellContent.c-file {
+				.inputWithFile { display: none; }
 			}
 
 			.card { 
