--- a/src/scss/block/dataview/view/list.scss
+++ b/src/scss/block/dataview/view/list.scss
@@ -12,7 +12,11 @@
 
             .cellContent.c-title { @include text-paragraph; }
 			.cellContent.c-title {
-				.name { @include text-overflow-nw; max-width: 240px; line-height: 24px; }
+				.name { @include text-overflow-nw; max-width: 240px; line-height: 24px; width: calc(100% - 28px) !important; }
+			}
+
+			.cellContent.c-file {
+				.inputWithFile { display: none; }
 			}
 
 			.icon.checkbox { width: 24px; height: 24px; vertical-align: top; }
