--- a/src/scss/block/dataview/view/list.scss
+++ b/src/scss/block/dataview/view/list.scss
@@ -4,15 +4,16 @@
 	.block.blockDataview {
         .viewItem.viewList { padding: 20px 0px 0px 0px; }
 		.viewItem.viewList {
-		    .item { width: 100%; display: inline-block; margin-bottom: 8px; }
-			.item:last-child { margin: 0px; }
+		    .row { width: 100%; display: inline-block; margin-bottom: 8px; }
+			.row:last-child { margin: 0px; }
 
 			.cellContent { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 24px; }
 			.cellContent:last-child { margin: 0px; }
+			.cellContent:empty { display: none; }
 
             .cellContent.c-title { @include text-paragraph; }
 			.cellContent.c-title {
-				.name { @include text-overflow-nw; max-width: 240px; line-height: 24px; width: calc(100% - 28px) !important; }
+				.name { @include text-overflow-nw; line-height: 24px; width: calc(100% - 28px) !important; }
 			}
 
 			.cellContent.c-file {
