--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -1,12 +1,9 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewObject { width: 228px; }
-	.menu.menuDataviewObject {
-		.form { padding: 0px 10px; }
-		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
-		.input { padding: 0px; font-size: 12px; height: 18px; }
+	.menu.menuDataviewObjectList {
 		.item { padding: 5px 10px; }
+		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
 	}
 
 	.menu.menuDataviewObjectType { width: 224px; }
