--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -28,6 +28,13 @@
 			.head.isDragging { border: 0px; background: rgba(255,255,255,0.5); }
 
 			.cellContent { width: 100%; @include text-overflow-nw; height: 20px; }
+			.cellContent.isName {
+				.icon.expand { 
+					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
+					background-size: 20px 20px; background-position: 9px 14px; background-color: rgba(255,255,255,0.75);
+				}
+				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
+			}
 				
 			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			td.cell:last-child { border-right: 0px; }
@@ -43,13 +50,6 @@
 			td.cell.add:hover { color: $colorBlack; }
 			td.cell.add:hover {
 				.icon.plus { background-image: url('~img/icon/dataview/button/plus1.svg'); }
-			}
-			td.cell.isName {
-				.icon.expand { 
-					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
-					background-size: 20px 20px; background-position: 9px 14px; background-color: rgba(255,255,255,0.75);
-				}
-				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
 			}
 
             td.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; z-index: 1; }
@@ -70,7 +70,7 @@
 			}
             
 			tr.active {
-				td.cell.isName {
+				.cellContent.isName {
 					.icon.expand { opacity: 1; }
 				}
 			}
