--- a/src/scss/block/dataview/view/common.scss
+++ b/src/scss/block/dataview/view/common.scss
@@ -5,27 +5,27 @@
 		.viewItem.viewGallery, 
 		.viewItem.viewBoard {
 			.card { white-space: normal; }
+			.card {
+				.cellContent { margin-bottom: 6px; }
+				.cellContent:last-child { margin-bottom: 0px; }
+				.cellContent {
+					.name { max-width: 100%; @include text-overflow-nw; }
+				}
 
-			.cellContent { margin-bottom: 6px; }
-			.cellContent:last-child { margin-bottom: 0px; }
-			.cellContent {
-				.name { max-width: 100%; @include text-overflow-nw; }
+				.cellContent.c-date { color: #6c6a5f; }
+
+				.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
+				.cellContent.c-title {
+					.smile { margin-bottom: 10px; }
+					.name { height: 24px; width: 100% !important; }
+				}
+
+				.cellContent.c-select { margin-bottom: 0px; }
+
+				.cellContent.c-file {
+					.inputWithFile { display: none; }
+				}
 			}
-
-			.cellContent.c-date { color: #6c6a5f; }
-
-			.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
-			.cellContent.c-title {
-				.smile { margin-bottom: 10px; }
-				.name { height: 24px; width: 100% !important; }
-			}
-
-			.cellContent.c-description {  }
-
-			.cellContent.c-file {
-				.inputWithFile { display: none; }
-			}
-
 		}
 	}
 }
