--- a/src/scss/block/dataview/view/list.scss
+++ b/src/scss/block/dataview/view/list.scss
@@ -7,17 +7,23 @@
 		    .row { width: 100%; display: inline-block; margin-bottom: 8px; }
 			.row:last-child { margin: 0px; }
 
-			.cellContent { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 24px; }
+			.cellContent { display: inline; vertical-align: top; margin-right: 8px; line-height: 24px; }
 			.cellContent:last-child { margin: 0px; }
 			.cellContent:empty { display: none; }
 
             .cellContent.c-title { @include text-paragraph; }
 			.cellContent.c-title {
-				.name { @include text-overflow-nw; line-height: 24px; width: calc(100% - 28px) !important; }
+				.name { @include text-overflow-nw; max-width: 200px; display: inline; line-height: 24px; }
 			}
 
 			.cellContent.c-file {
 				.inputWithFile { display: none; }
+			}
+
+			.cellContent.c-select { line-height: 24px; vertical-align: middle; }
+			.cellContent.c-select {
+				.wrap { display: inline; line-height: 24px; vertical-align: middle; }
+				.tagItem { margin-bottom: 0px; }
 			}
 
 			.icon.checkbox { width: 24px; height: 24px; vertical-align: top; }
