--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -4,6 +4,8 @@
 	.block.blockDataview {
         .viewItem.viewGrid { border-collapse: collapse; border-bottom: 1px solid #e0ded2; table-layout: fixed; }
 		.viewItem.viewGrid {
+			.icon.checkbox { vertical-align: top; }
+
 			.head { 
 				text-align: left; color: #6c6a5f; padding: 14px; border-bottom: 1px solid #e0ded2; white-space: nowrap; 
 				font-weight: 400; line-height: 20px; position: relative; @include text-overflow-nw; cursor: grab;
@@ -35,6 +37,13 @@
 				}
 				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
 			}
+			.cellContent.canEdit.c-object { cursor: text; }
+
+			tr.active {
+				.cellContent.isName {
+					.icon.expand { opacity: 1; }
+				}
+			}
 				
 			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			td.cell:last-child { border-right: 0px; }
@@ -52,32 +61,7 @@
 				.icon.plus { background-image: url('~img/icon/dataview/button/plus1.svg'); }
 			}
 
-            td.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; z-index: 1; }
-            td.cell.isEditing {
-                .input-text { padding: 0px; height: 20px; }
-				.textarea { 
-					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
-					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1; white-space: normal;
-				}
-				.cellContent { height: auto; overflow: visible; white-space: normal; }
-				.cellContent {
-					.name { display: inline-block; }
-				}
-            }
-			td.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
-			td.cell.isEditing.c-select {
-				.filter { display: inline-block; }
-			}
-            
-			tr.active {
-				.cellContent.isName {
-					.icon.expand { opacity: 1; }
-				}
-			}
-
 			td.cell.c-select { cursor: text; padding-bottom: 8px; }
-
-			.icon.checkbox { vertical-align: top; }
 		}
     }
 }
