--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -35,9 +35,7 @@
 					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
 					background-size: 20px 20px; background-position: 9px 14px; background-color: rgba(255,255,255,0.75);
 				}
-				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
 			}
-			.cellContent.canEdit.c-object { cursor: text; }
 
 			tr.active {
 				.cellContent.isName {
@@ -45,23 +43,27 @@
 				}
 			}
 				
-			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
-			td.cell:last-child { border-right: 0px; }
-			td.cell {
-				.name { @include text-overflow-nw; width: 100%; }
+			.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
+			.cell:last-child { border-right: 0px; }
+
+			.cell.isEditing.c-description, .cell.isEditing.c-select {
+				.cellContent { min-width: 256px; padding: 14px; }
+			}
+			.cell.isEditing.c-select { 
+				.cellContent { padding-bottom: 8px; }
 			}
 
-			td.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
-			td.cell.add {
+			.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
+			.cell.add {
 				 .icon { vertical-align: top; margin: 0px 4px 0px 0px; }
 				 .name { vertical-align: top; display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: calc(100% - 24px) }
 			}
-			td.cell.add:hover { color: $colorBlack; }
-			td.cell.add:hover {
+			.cell.add:hover { color: $colorBlack; }
+			.cell.add:hover {
 				.icon.plus { background-image: url('~img/icon/dataview/button/plus1.svg'); }
 			}
 
-			td.cell.c-select { cursor: text; padding-bottom: 8px; }
+			.cell.c-select { padding-bottom: 8px; }
 		}
     }
 }
