--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -18,7 +18,7 @@
 	}
 }
 
-.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; z-index: 1; }
+.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; }
 .cell.isEditing {
 	.input-text { padding: 0px; height: 20px; }
 	.textarea { 
@@ -31,8 +31,12 @@
 	}
 }
 
+.cell.isEditing.c-description, .cell.isEditing.c-select { box-shadow: 0px 0px; }
 .cell.isEditing.c-description, .cell.isEditing.c-select {
-	.cellContent { position: absolute; left: 0px; top: 0px; overflow: visible !important; height: auto !important; }
+	.cellContent { 
+		position: absolute; left: 0px; top: 0px; overflow: visible !important; height: auto !important; white-space: normal !important; 
+		box-shadow: 0px 0px 0px 2px $colorOrange inset; background: #fff; z-index: 10;
+	}
 }
 
 .cell.isEditing.c-description { padding: 14px; }
