--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -30,7 +30,7 @@
 .cell.isEditing.c-description, .cell.isEditing.c-select, .cell.isEditing.c-object { box-shadow: 0px 0px; }
 .cell.isEditing.c-description, .cell.isEditing.c-select, .cell.isEditing.c-object {
 	.cellContent { 
-		position: absolute; left: 0px; top: 0px; overflow: visible !important; height: auto !important; white-space: normal !important; 
+		position: absolute; left: 0px; top: -1px; overflow: visible !important; height: calc(100% + 2px) !important; white-space: normal !important; 
 		box-shadow: 0px 0px 0px 2px $colorOrange inset; background: #fff; z-index: 10;
 	}
 }
@@ -39,7 +39,7 @@
 	.cellContent { display: none; }
 }
 
-.cell.isEditing.c-select {
+.cell.isEditing.c-select, .cell.isEditing.c-object {
 	.filter { display: inline-block; }
 }
 
@@ -69,6 +69,23 @@
 	.DraggableTags::after { display: none; }
 	.DraggableTags-tag { max-width: 100%; }
 
+	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
+	.filter {
+		#filter { 
+			-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
+			word-wrap: break-word; white-space: normal;
+		}
+		#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
+	}
+	.noPlaceholder {
+		.filter #filter { position: relative; }
+		#placeHolder { display: none; }
+	}
+}
+
+.cellContent.c-object { line-height: 0px; }
+.cellContent.c-object {
+	.item { margin: 0px 6px 6px 0px; vertical-align: top; max-width: 100%; }
 	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
 	.filter {
 		#filter { 
