--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -8,6 +8,11 @@
 			.name { @include text-overflow-nw; width: calc(100% - 26px); }
 		}
 		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
+
+		.section:first-child, .section:last-child { padding: 8px 0px; }
+
+		.section.first { padding-top: 0px; }
+		.section.last { padding-top: 0px; }
 	}
 
 	.menu.menuDataviewObjectType { width: 224px; }
