--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -46,8 +46,8 @@
 			.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			.cell:last-child { border-right: 0px; }
 
-			.cell.isEditing.c-description, .cell.isEditing.c-select, .cell.isEditing.c-object {
-				.cellContent { min-width: 256px; padding: 14px; }
+			.cell.isEditing {
+				.cellContent { min-width: 300px; padding: 14px; }
 			}
 			.cell.isEditing.c-select { 
 				.cellContent { padding-bottom: 8px; }
