--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -17,31 +17,23 @@
 	}
 }
 
-.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; }
+.cell.isEditing { border-radius: 2px; }
 .cell.isEditing {
 	.input-text { padding: 0px; height: 20px; }
-	.cellContent { height: auto; overflow: visible; white-space: normal; }
-	.cellContent {
-		.name { display: inline-block; }
-	}
-}
-
-.cell.isEditing.c-description, .cell.isEditing.c-select, .cell.isEditing.c-object { box-shadow: 0px 0px; }
-.cell.isEditing.c-description, .cell.isEditing.c-select, .cell.isEditing.c-object {
 	.cellContent { 
 		position: absolute; left: 0px; top: -1px; overflow: visible !important; height: auto !important; white-space: normal !important; 
 		box-shadow: 0px 0px 0px 2px $colorOrange inset; background: #fff; z-index: 10; min-height: calc(100% + 2px);
 	}
-}
-
-.cell.isEditing.c-description {
-	.cellContent { display: none; }
+	.cellContent {
+		.name { display: inline-block; }
+	}
 }
 
 .cell.isEditing.c-select, .cell.isEditing.c-object {
 	.filter { display: inline-block; }
 }
 
+.cellContent { line-height: 20px; }
 .cellContent {
 	.icon.object { width: 20px; height: 20px; margin-right: 4px; vertical-align: top; }
 	.name { display: inline-block; vertical-align: top; }
