--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -30,6 +30,10 @@
 	.cell { @include text-common; width: calc(100% - 220px); position: relative; padding: 2px 0px; line-height: 20px; }
 
 	.cell.isEditing {
-		.cellContent { position: static; }
+		.cellContent { position: static; padding: 5px !important; }
+	}
+
+	.cell.isEditing.c-description { 
+		.cellContent { box-shadow: 0px 0px; padding: 0px !important; }
 	}
 }
