--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -3,14 +3,16 @@
 .popups {
 	.popup.popupEditorPage {
 		.innerWrap { width: 960px; height: calc(100% - 128px); padding: 0px; }
-		
-		.header { position: fixed; padding: 0px; border-radius: 12px 12px 0px 0px; }
+
+		.header { position: absolute; padding: 0px; border-radius: 12px 12px 0px 0px; }
 		.header {
 			.menu { right: 0px; top: 0px; }
 		}
 		
-		.content { height: 100%; overflow-y: scroll; padding: 0px; }
-		.selection { height: 100%; }
+		.content { height: 100%; }
+		.content > .wrap { height: 100%; }
+
+		.selection { height: calc(100% - 38px); overflow-y: scroll; margin-top: 38px; }
 		.blocks { margin-left: -48px; }
 		.editor { margin-top: 38px; }
 	}	
