--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -35,7 +35,7 @@
 
 .cellContent { line-height: 20px; }
 .cellContent {
-	.icon.object { width: 20px; height: 20px; margin-right: 4px; vertical-align: top; }
+	.icon.object { margin-right: 4px; vertical-align: top; }
 	.name { display: inline-block; vertical-align: top; }
 	div.name:empty { display: none; }
 	span:empty { display: none; }
