--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -77,3 +77,10 @@
 	.smile, .icon.file-type, .img { width: 100%; height: 100%; margin: 0px !important; transition: none; vertical-align: top; }
 	.img { display: block; object-fit: cover; }
 }
+.icon.object.c20 { width: 20px; height: 20px; line-height: 20px; }
+.icon.object.c24 { width: 24px; height: 24px; line-height: 24px; }
+.icon.object.c26 { width: 26px; height: 26px; line-height: 26px; }
+.icon.object.c28 { width: 28px; height: 28px; line-height: 28px; }
+.icon.object.c32 { width: 32px; height: 32px; line-height: 32px; }
+.icon.object.c48 { display: block; width: 48px; height: 48px; }
+.icon.object.c64 { display: block; width: 64px; height: 64px; }
