--- a/src/scss/block/dataview/view/common.scss
+++ b/src/scss/block/dataview/view/common.scss
@@ -6,12 +6,9 @@
 		.viewItem.viewBoard {
 			.card { white-space: normal; }
 			.card {
-				.cellContent { margin-bottom: 6px; }
+				.cellContent { margin-bottom: 6px; cursor: default !important; }
 				.cellContent:last-child { margin-bottom: 0px; }
-				.cellContent {
-					.name { max-width: 100%; @include text-overflow-nw; }
-				}
-
+				
 				.cellContent.c-date { color: #6c6a5f; }
 
 				.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
