--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -5,20 +5,17 @@
 
         .viewItem.viewBoard {
             .columns { white-space: nowrap; }
-            .column { width: 240px; margin-right: 24px; display: inline-block; vertical-align: top; }
+            .column { width: 240px; margin-right: 24px; display: inline-block; vertical-align: top; overflow-x: visible; overflow-y: auto; }
             .column {
                 .head { padding: 10px 4px; }
             }
 
             .card { width: 100%; margin-bottom: 8px; background: #fff; }
             
-            .card.add { 
-                min-height: 0px; text-align: center; padding: 10px 0px; line-height: 1; transition: $transitionFast; cursor: pointer; 
-            }
+            .card.add { min-height: unset; text-align: center; padding: 10px 0px; margin: 0px; line-height: 1; transition: $transitionFast; cursor: pointer; }
             .card.add {
                 .icon { vertical-align: top; }
             }
-            
             .card.add:hover { border-color: $colorBlack; }
             .card.add:hover {
                 .icon { background-image: url('~img/icon/dataview/button/plus1.svg'); }
