--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -14,7 +14,7 @@
 }
 .tagItem.canEdit { padding-right: 18px; }
 
-.tagItem.default { color: $colorBlack; box-shadow: 0px 0px 0px 1px #dfddd0 inset; }
+.tagItem.default { color: $colorBlack; background: #fff; box-shadow: 0px 0px 0px 1px #dfddd0 inset; }
 .tagItem.grey { color: #8c9ea5; background: #ebeff1; }
 .tagItem.yellow { color: #b2a616; background: #fbf5b8; }
 .tagItem.orange { color: #d3720d; background: #ffEcc8; }
