--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -82,5 +82,5 @@
 .icon.object.c26 { width: 26px; height: 26px; }
 .icon.object.c28 { width: 28px; height: 28px; }
 .icon.object.c32 { width: 32px; height: 32px; }
-.icon.object.c48 { display: block; width: 48px; height: 48px; border-radius: 100%: overflow: hidden; }
-.icon.object.c64 { display: block; width: 64px; height: 64px; border-radius: 100%: overflow: hidden; }
+.icon.object.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; }
+.icon.object.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; }
