--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -87,6 +87,7 @@ body.platformWindows {
 .disabled { opacity: 0.5 !important; cursor: default !important; }
 .dis { cursor: default !important; }
 .readOnly { -webkit-user-modify: read-only !important; }
+.no-br { border-radius: unset !important;}
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
