--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -75,8 +75,9 @@
 
 .icon.object { width: 20px; height: 20px; }
 .icon.object {
-	.smile, .icon.file-type, .img { width: 100%; height: 100%; margin: 0px !important; transition: none; vertical-align: top; }
+	.smile, .icon, .img { width: 100%; height: 100%; margin: 0px !important; transition: none; vertical-align: top; }
 	.img { display: block; object-fit: cover; }
+	.icon.picture { background-image: url('~img/icon/menu/action/block/picture0.svg'); }
 }
 .icon.object.c24 { width: 24px; height: 24px; }
 .icon.object.c26 { width: 26px; height: 26px; }
