--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -73,15 +73,15 @@
 .icon.user.teal { background-color: $colorTeal; }
 .icon.user.green { background-color: $colorLime; }
 
-.icon.object { width: 20px; height: 20px; }
-.icon.object {
+.icon-object { display: inline-block; vertical-align: middle; position: relative; width: 20px; height: 20px; }
+.icon-object {
 	.smile, .icon, .img { width: 100%; height: 100%; margin: 0px !important; transition: none; vertical-align: top; }
 	.img { display: block; object-fit: cover; }
 	.icon.picture { background-image: url('~img/icon/menu/action/block/picture0.svg'); }
 }
-.icon.object.c24 { width: 24px; height: 24px; }
-.icon.object.c26 { width: 26px; height: 26px; }
-.icon.object.c28 { width: 28px; height: 28px; }
-.icon.object.c32 { width: 32px; height: 32px; }
-.icon.object.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; }
-.icon.object.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; }
+.icon-object.c24 { width: 24px; height: 24px; }
+.icon-object.c26 { width: 26px; height: 26px; }
+.icon-object.c28 { width: 28px; height: 28px; }
+.icon-object.c32 { width: 32px; height: 32px; }
+.icon-object.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; }
+.icon-object.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; }
