--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -11,7 +11,7 @@
 			transform: translateX(-50%); padding: 4px 8px;
 		}
 		.head {
-			.icon.object { margin-right: 6px; }
+			.icon-object { margin-right: 6px; }
 			.icon {  width: 20px; height: 20px; vertical-align: top; margin-right: 6px; }
 			.icon.search { background-size: 18px 18px; background-image: url('~img/icon/search.svg'); }
 			.input { 
@@ -33,7 +33,7 @@
 			}
 			.item {
 				.smile { transition: $transitionFast; }
-				.icon.object { position: absolute; left: 16px; top: 8px; transition: $transitionFast; }
+				.icon-object { position: absolute; left: 16px; top: 8px; transition: $transitionFast; }
 				.info { padding: 0px 0px 0px 60px; display: inline-block; vertical-align: middle; width: 100%; }
 				.name { width: 100%; line-height: 22px; height: 22px; @include text-overflow-nw;  }
 				.descr { width: 100%; @include text-small; max-height: 18px; @include text-overflow-nw; color: #6c6a5f; }
@@ -57,7 +57,7 @@
 					.inner { padding: 16px; }
 					.info { border: 0px; margin-top: -2px; }
 					.icon.arrow { opacity: 1; right: -28px; display: block; }
-					.icon.object { left: 16px; top: 16px; }
+					.icon-object { left: 16px; top: 16px; }
 					.icon.arrow { 
 						width: 24px; height: 24px; position: absolute; right: -24px; top: 50%; transform: translateY(-50%);
 						background-image: url('~img/arrow/nav0.svg');
@@ -80,7 +80,7 @@
 			
 			.selected { padding: 16px 16px 12px 16px; border-radius: 8px; border: 1px solid $colorLightGrey; transition: $transitionFast; }
 			.selected {
-				.icon.object { margin-bottom: 8px; }
+				.icon-object { margin-bottom: 8px; }
 				.name { margin-bottom: 1px; @include text-overflow-nw; height: 22px; }
 				.descr { @include text-small; color: #6c6a5f; @include text-overflow; max-height: 54px; }
 				.cover { position: static; height: 156px; margin-top: 11px; }
