--- a/src/scss/component/pager.scss
+++ b/src/scss/component/pager.scss
@@ -1,16 +1,16 @@
 @import "~scss/_vars";
 
-.pager { 
-    text-align: center; margin: 13px 0px 0px 0px; color: $colorDarkGrey; cursor: pointer; white-space: nowrap; @include text-common;
-}
+.pager { text-align: center; margin: 13px 0px 0px 0px; color: $colorDarkGrey; white-space: nowrap; @include text-common; }
 
 .pager {
     .page { 
         min-width: 24px; display: inline-block; padding: 0px 2px; transition: $transitionFast; text-align: center; margin-right: 8px; 
-        vertical-align: top; line-height: 24px;
+        vertical-align: top; line-height: 24px; cursor: pointer;
     }
     .page:last-child { margin: 0px; }
     .page:hover, .page.active { color: $colorBlack; }
+	
+	.dots { min-width: 24px; display: inline-block; padding: 0px 2px; text-align: center; margin-right: 8px; vertical-align: top; line-height: 24px; }
 
     .icon.arrow { width: 24px; height: 24px; vertical-align: top; background-image: url('~img/arrow/pager0.svg'); }
     .icon.arrow:hover { background-image: url('~img/arrow/pager1.svg'); }
