--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -12,7 +12,7 @@
 		.content { height: 100%; }
 		.content > .wrap { height: 100%; }
 
-		.selection { height: calc(100% - 38px); overflow-y: scroll; margin-top: 38px; }
+		.selection { height: 100%; overflow-x: hidden; overflow-y: scroll; padding-top: 38px; }
 		.blocks { margin-left: -48px; }
 		.editor { margin-top: 38px; }
 	}	
