IconObject in MenuItemVertical

--- a/src/scss/popup/archive.scss
+++ b/src/scss/popup/archive.scss
@@ -33,7 +33,7 @@
 		
 		.item {
 			.checkbox { margin-right: 4px; }
-			.smile { margin-right: 4px; }
+			.icon-object { margin-right: 4px; }
 			.name { display: inline-block; vertical-align: middle; width: calc(100% - 56px); @include text-overflow-nw; }
 		}
 	}
