fix dataview in popupEditor resize problem

--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -13,7 +13,8 @@
 		.content > .wrap { height: 100%; }
 
 		.selection { height: 100%; overflow-x: hidden; overflow-y: scroll; }
-		.blocks { margin-left: -48px; }
 		.editor { margin-top: 38px; }
+
+		.editorWrapper.isDataview { width: calc(100% - 96px); }
 	}	
 }
